[gd_scene load_steps=7 format=3 uid="uid://ckqa8dchj36x3"]

[ext_resource type="Script" path="res://Title.gd" id="1_761rx"]
[ext_resource type="Texture2D" uid="uid://c32n3hm0aret" path="res://9p_title.png" id="2_0dya4"]
[ext_resource type="Texture2D" uid="uid://bobr0ov7tl33n" path="res://ksword_title.png" id="3_t3hqp"]
[ext_resource type="Texture2D" uid="uid://gdc62qavmjay" path="res://moon_x200.png" id="4_3m7ne"]
[ext_resource type="Texture2D" uid="uid://btufevun4oa81" path="res://bg.png" id="4_blfuw"]
[ext_resource type="Texture2D" uid="uid://c4wo43d6otb4w" path="res://card_back_title.png" id="5_tx35s"]

[node name="Title" type="Node2D"]
script = ExtResource("1_761rx")
front_textures = Array[Texture]([ExtResource("2_0dya4"), ExtResource("3_t3hqp"), ExtResource("4_3m7ne")])
back_texture = ExtResource("5_tx35s")

[node name="BG" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 960.0
texture = ExtResource("4_blfuw")

[node name="Button" type="Button" parent="."]
offset_left = 166.0
offset_top = 608.0
offset_right = 441.0
offset_bottom = 748.0
text = "New Reading"

[node name="Go_encyclopedia" type="Button" parent="."]
offset_left = 833.0
offset_top = 606.0
offset_right = 1112.0
offset_bottom = 751.0
text = "Encyclopedia
"

[node name="Spinning_card" type="Sprite2D" parent="."]
position = Vector2(640, 480)

[connection signal="pressed" from="Button" to="." method="_on_drawing_button_pressed"]
[connection signal="pressed" from="Go_encyclopedia" to="." method="_on_go_encyclopedia_pressed"]
